Upgrade Micronaut Spring Micronaut 2.x (#57)
* Upgrade to Micronaut 2.x

* refactor QualifierSpec

* build: maven coordinate is io.micronaut.views

* use project spring not dependency micronaut-spring

* build: bump up micronaut to 2.0.2

* ignore failing tests

* Remove ignore on tests. Upgrade spring and boot

* Fix test

* Upgrade to 2.2

* Enable preview for jdk15

Co-authored-by: Iván López <lopezi@objectcomputing.com>
Co-authored-by: Sergio del Amo <sergio.delamo@softamo.com>
Co-authored-by: jameskleeh <james.kleeh@gmail.com>